--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "format": "prettier --write ./**/*.{ts,tsx}",
     "compiler-check": "tsc --noEmit",
     "knip": "knip --config knip.json --exclude devDependencies,unlisted",
-    "jest": "jest --runInBand",
+    "jest": "jest --ci",
     "cy:open": "cypress open",
     "cy:run": "cypress run"
   },
@@ -74,14 +74,13 @@
     "eslint-plugin-import": "2.29.1",
     "eslint-plugin-jest": "^28.0.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
-    "eslint-plugin-n": "^16.0.0",
     "eslint-plugin-n": "17.8.1",
     "eslint-plugin-promise": "6.2.0",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
-    "knip": "5.16.0",
+    "knip": "5.17.4",
     "lint-staged": "15.2.5",
     "mockdate": "3.0.5",
     "msw": "2.3.1",
