--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,11 +10,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: use Node.js
-        uses: actions/setup-node@v4
+        uses: pnpm/action-setup@v4
         with:
           node-version: '20'
+          version: '9.12.3'
       - name: install dependency
-        run: pnpm i
+        run: pnpm i --frozen-lockfile
       - name: test format
         run: pnpm run prettier
       - name: test linter
