--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "prettier": "3.3.3",
     "react-test-renderer": "^18.2.0",
     "simple-git-hooks": "2.11.1",
+    "ts-node": "10.9.2",
     "typescript": "5.6.3",
     "undici": "5.28.4"
   }
