--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@vercel/speed-insights": "^1.0.2",
     "axios": "1.7.7",
     "dayjs": "1.11.13",
+    "jest-fixed-jsdom": "^0.0.9",
     "next": "15.0.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -79,7 +80,7 @@
     "knip": "5.37.1",
     "lint-staged": "15.2.10",
     "mockdate": "3.0.5",
-    "msw": "2.4.3",
+    "msw": "2.6.5",
     "next-router-mock": "0.9.13",
     "next-test-api-route-handler": "3.2.0",
     "npm-run-all2": "7.0.1",
