--- a/package.json
+++ b/package.json
@@ -57,8 +57,8 @@
     "@types/react-test-renderer": "18.3.0",
     "@types/sanitize-html": "2.13.0",
     "@types/styled-components": "5.1.34",
-    "@typescript-eslint/eslint-plugin": "^7.0.0",
-    "@typescript-eslint/parser": "^7.0.0",
+    "@typescript-eslint/eslint-plugin": "8.14.0",
+    "@typescript-eslint/parser": "8.14.0",
     "babel-loader": "9.2.1",
     "babel-plugin-styled-components": "2.1.4",
     "cypress": "13.15.2",
