--- a/package.json
+++ b/package.json
@@ -29,13 +29,12 @@
   "dependencies": {
     "@hookform/resolvers": "3.10.0",
     "@sendgrid/mail": "8.1.4",
-    "@vercel/speed-insights": "^1.0.2",
+    "@vercel/speed-insights": "1.1.0",
     "axios": "1.7.9",
     "dayjs": "1.11.13",
-    "jest-fixed-jsdom": "^0.0.9",
     "next": "15.1.6",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-hook-form": "7.54.2",
     "sanitize-html": "2.14.0",
     "styled-components": "6.1.15",
@@ -50,10 +49,10 @@
     "@testing-library/jest-dom": "6.6.3",
     "@testing-library/react": "16.2.0",
     "@testing-library/react-hooks": "8.0.1",
-    "@testing-library/user-event": "^14.4.3",
+    "@testing-library/user-event": "14.6.1",
     "@types/jest": "29.5.14",
     "@types/node": "22.13.1",
-    "@types/react": "18.3.18",
+    "@types/react": "19.0.8",
     "@types/react-test-renderer": "19.0.0",
     "@types/sanitize-html": "2.13.0",
     "@types/styled-components": "5.1.34",
@@ -64,19 +63,20 @@
     "cypress": "14.0.2",
     "eslint": "8.57.1",
     "eslint-config-next": "15.1.6",
-    "eslint-config-prettier": "^10.0.0",
-    "eslint-config-standard": "^17.0.0",
+    "eslint-config-prettier": "10.0.1",
+    "eslint-config-standard": "17.1.0",
     "eslint-import-resolver-typescript": "3.7.0",
     "eslint-plugin-cypress": "4.1.0",
     "eslint-plugin-import": "2.31.0",
-    "eslint-plugin-jest": "^28.0.0",
-    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-jest": "28.11.0",
+    "eslint-plugin-jsx-a11y": "6.10.2",
     "eslint-plugin-n": "17.15.1",
     "eslint-plugin-promise": "7.2.1",
-    "eslint-plugin-react": "^7.31.11",
-    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react": "7.37.4",
+    "eslint-plugin-react-hooks": "5.1.0",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
+    "jest-fixed-jsdom": "0.0.9",
     "knip": "5.43.6",
     "lint-staged": "15.4.3",
     "mockdate": "3.0.5",
@@ -86,7 +86,7 @@
     "npm-run-all2": "7.0.2",
     "pathpida": "0.23.1",
     "prettier": "3.4.2",
-    "react-test-renderer": "^18.2.0",
+    "react-test-renderer": "19.0.0",
     "simple-git-hooks": "2.11.1",
     "ts-node": "10.9.2",
     "typescript": "5.7.3",
