--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
   },
   "devDependencies": {
     "@babel/core": "7.27.7",
+    "@eslint/compat": "^1.3.1",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.30.0",
     "@next/eslint-plugin-next": "15.3.4",
     "@testing-library/cypress": "10.0.3",
     "@testing-library/dom": "10.4.0",
@@ -60,12 +63,12 @@
     "babel-loader": "10.0.0",
     "babel-plugin-styled-components": "2.1.4",
     "cypress": "14.5.0",
-    "eslint": "8.57.1",
+    "eslint": "9.30.0",
     "eslint-config-next": "15.3.4",
     "eslint-config-prettier": "10.1.5",
     "eslint-config-standard": "17.1.0",
     "eslint-import-resolver-typescript": "4.4.4",
-    "eslint-plugin-cypress": "4.3.0",
+    "eslint-plugin-cypress": "5.0.1",
     "eslint-plugin-import": "2.32.0",
     "eslint-plugin-jest": "29.0.1",
     "eslint-plugin-jsx-a11y": "6.10.2",
@@ -73,6 +76,7 @@
     "eslint-plugin-promise": "7.2.1",
     "eslint-plugin-react": "7.37.5",
     "eslint-plugin-react-hooks": "5.2.0",
+    "globals": "^16.2.0",
     "jest": "30.0.3",
     "jest-environment-jsdom": "30.0.2",
     "jest-fixed-jsdom": "0.0.9",
