chore: setting of lockfile maintenance

--- a/renovate.json
+++ b/renovate.json
@@ -1,4 +1,8 @@
 {
   "extends": ["config:base"],
+  "lockFileMaintenance": {
+    "enabled": true,
+    "schedule": ["every weekend"]
+  },
   "automerge": true
 }
