--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "format": "prettier --write ./**/*.{ts,tsx}",
     "compiler-check": "tsc --noEmit",
     "knip": "knip --config knip.json --exclude devDependencies,unlisted",
-    "jest": "jest --ci",
-    "cy:open": "cypress open",
-    "cy:run": "cypress run"
+    "jest": "jest --ci"
   },
   "simple-git-hooks": {
     "pre-commit": "npx lint-staged"
@@ -46,7 +44,6 @@
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.30.0",
     "@next/eslint-plugin-next": "16.0.10",
-    "@testing-library/cypress": "10.1.0",
     "@testing-library/dom": "10.4.1",
     "@testing-library/jest-dom": "6.9.1",
     "@testing-library/react": "16.3.1",
@@ -62,13 +59,11 @@
     "@typescript-eslint/parser": "8.50.0",
     "babel-loader": "10.0.0",
     "babel-plugin-styled-components": "2.1.4",
-    "cypress": "15.8.0",
     "eslint": "9.39.2",
     "eslint-config-next": "16.0.10",
     "eslint-config-prettier": "10.1.8",
     "eslint-config-standard": "17.1.0",
     "eslint-import-resolver-typescript": "4.4.4",
-    "eslint-plugin-cypress": "5.2.0",
     "eslint-plugin-import": "2.32.0",
     "eslint-plugin-jest": "29.5.0",
     "eslint-plugin-jsx-a11y": "6.10.2",
